--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@ html, body {
   padding: 0;
   background: #0d47a1;
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 body {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 #container {
+  position: relative;
   width: 100%;
   max-width: 900px;
   padding: 12px;
@@ -35,7 +36,7 @@ canvas {
   box-shadow: 0 10px 30px rgba(0,0,0,.35);
 }
 
-/* OVERLAY */
+/* OVERLAYS */
 .overlay {
   position: absolute;
   inset: 0;
@@ -48,11 +49,12 @@ canvas {
   color: #0d47a1;
   border-radius: 14px;
   z-index: 10;
+  padding: 20px;
 }
 
 button {
-  margin-top: 18px;
-  padding: 12px 28px;
+  margin-top: 16px;
+  padding: 12px 30px;
   font-size: 16px;
   border: none;
   border-radius: 8px;
@@ -61,32 +63,58 @@ button {
 }
 button:hover { background: #ffc107; }
 
+.qcm button {
+  width: 100%;
+  margin: 6px 0;
+}
+
 #footer {
   margin: 10px 0;
   color: white;
   font-weight: bold;
   text-align: center;
 }
+
+#rotateMsg {
+  position: fixed;
+  inset: 0;
+  background: #0d47a1;
+  color: white;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 30px;
+  z-index: 20;
+  font-size: 18px;
+}
 </style>
 </head>
 
 <body>
 
-<div id="container">
-  <div style="position:relative">
-    <canvas id="game"></canvas>
+<div id="rotateMsg">
+📱🔄<br><br>
+Ce jeu se joue en <b>mode paysage</b><br>
+Tourne ton téléphone 🙂
+</div>
 
-    <!-- ÉCRAN DÉMARRAGE -->
-    <div id="start" class="overlay">
-      <h2>Runner Mission Locale</h2>
-      <p>
-        Saute pour éviter les obstacles<br>
-        Clic / toucher / <b>Espace</b><br><br>
-        Gameplay inspiré du Dino Google
-      </p>
-      <button id="startBtn">Démarrer</button>
-    </div>
+<div id="container">
+  <canvas id="game"></canvas>
+
+  <!-- ACCUEIL -->
+  <div id="start" class="overlay">
+    <h2>Runner Mission Locale</h2>
+    <p>
+      🎯 Saute pour éviter les obstacles<br>
+      Clic / toucher / <b>Espace</b><br><br>
+      🧠 En cas d’erreur, une question t’aide à continuer
+    </p>
+    <button id="startBtn">Démarrer</button>
   </div>
+
+  <!-- QUESTIONS -->
+  <div id="question" class="overlay" style="display:none"></div>
 </div>
 
 <div id="footer">La Mission Locale vous souhaite un super jeu !</div>
@@ -97,20 +125,23 @@ const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
 function resizeCanvas(){
-  const width = document.getElementById("container").clientWidth;
-  const height = Math.min(window.innerHeight * 0.65, width * 9 / 16);
-  canvas.width = width;
-  canvas.height = height;
+  const w = document.getElementById("container").clientWidth;
+  const h = Math.min(window.innerHeight * 0.75, w * 9 / 16);
+  canvas.width = w;
+  canvas.height = h;
 }
 window.addEventListener("resize", resizeCanvas);
 resizeCanvas();
 
 /* ===== GAME STATE ===== */
 let state = "menu";
+let paused = false;
 let score = 0;
-let speed = 3;
-let spawnDelay = 1800;
-let lastSpawn = 0;
+let level = 1;
+let speed = 1.6;
+let spawnDelay = 1600;
+let immunity = 0;
+let countdown = 0;
 
 /* ===== PLAYER ===== */
 const player = {
@@ -121,45 +152,55 @@ const player = {
   onGround: true
 };
 
+let obstacles = [];
+let lastSpawn = 0;
+
+/* ===== SOL ===== */
 function groundY(){
   return canvas.height - 70;
 }
 
-/* ===== OBSTACLES ===== */
-let obstacles = [];
+/* ===== QUESTIONS ===== */
+const QUESTIONS = [
+  {q:"Objectif principal d’un CV ?", c:["Décrocher un entretien","Raconter sa vie","Se justifier"], a:0},
+  {q:"Photo sur le CV ?", c:["Professionnelle","Obligatoire","Entre amis"], a:0},
+  {q:"Ordre des expériences ?", c:["De la plus récente à l’ancienne","Au hasard","Par durée"], a:0},
+  {q:"CV efficace ?", c:["Clair et structuré","Très coloré","Très long"], a:0},
+  {q:"Fautes d’orthographe ?", c:["À éviter","Tolérées","Sans importance"], a:0},
+  {q:"Titre du CV ?", c:["Poste recherché","Nom du collège","Âge"], a:0}
+];
+let questionDeck = [];
 
-function spawnObstacle(){
-  const size = Math.random() < 0.5 ? 36 : 44;
-  obstacles.push({
-    x: canvas.width + 20,
-    y: groundY() - size + 8,
-    w: 26 + Math.random() * 10,
-    h: size
-  });
+function initQuestions(){
+  questionDeck = [...QUESTIONS].sort(() => Math.random() - 0.5);
 }
 
 /* ===== RESET ===== */
 function resetGame(){
   score = 0;
-  speed = 3;
-  spawnDelay = 1800;
-  lastSpawn = 0;
+  level = 1;
+  speed = 1.6;
+  spawnDelay = 1600;
+  immunity = 120;
   obstacles = [];
   player.y = groundY();
   player.vy = 0;
   player.onGround = true;
+  lastSpawn = 0;
+  initQuestions();
 }
 
-/* ===== START BUTTON ===== */
+/* ===== START ===== */
 document.getElementById("startBtn").onclick = () => {
   document.getElementById("start").style.display = "none";
   resetGame();
-  state = "play";
+  countdown = 180;
+  state = "countdown";
 };
 
 /* ===== CONTROLS ===== */
 function jump(){
-  if(state === "play" && player.onGround){
+  if(state === "play" && !paused && player.onGround){
     player.vy = -11.5;
     player.onGround = false;
   }
@@ -168,12 +209,81 @@ window.addEventListener("keydown", e => { if(e.code === "Space") jump(); });
 canvas.addEventListener("click", jump);
 canvas.addEventListener("touchstart", jump);
 
+/* ===== ORIENTATION ===== */
+const rotateMsg = document.getElementById("rotateMsg");
+function checkOrientation(){
+  if(window.innerWidth < 900 && window.innerHeight > window.innerWidth){
+    rotateMsg.style.display = "flex";
+    paused = true;
+  } else {
+    rotateMsg.style.display = "none";
+    paused = false;
+  }
+}
+window.addEventListener("resize", checkOrientation);
+checkOrientation();
+
+/* ===== OBSTACLES ===== */
+function spawnObstacle(){
+  const h = Math.random() < 0.5 ? 36 : 44;
+  obstacles.push({
+    x: canvas.width + 30,
+    y: groundY() - h + 8,
+    w: 26 + Math.random() * 10,
+    h: h
+  });
+}
+
+/* ===== QUESTIONS ===== */
+function showQuestion(){
+  state = "question";
+  const box = document.getElementById("question");
+
+  if(questionDeck.length === 0){
+    document.getElementById("start").style.display = "flex";
+    state = "menu";
+    return;
+  }
+
+  const q = questionDeck.shift();
+  box.innerHTML = `<h3>${q.q}</h3><div class="qcm"></div>`;
+  box.style.display = "flex";
+
+  q.c.forEach((txt,i)=>{
+    const b = document.createElement("button");
+    b.textContent = txt;
+    b.onclick = ()=>{
+      box.style.display = "none";
+      if(i === q.a){
+        immunity = 120;
+        obstacles = [];
+        state = "play";
+      } else {
+        document.getElementById("start").style.display = "flex";
+        state = "menu";
+      }
+    };
+    box.querySelector(".qcm").appendChild(b);
+  });
+}
+
 /* ===== LOOP ===== */
 function loop(time){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  if(state === "play"){
-    /* PHYSIQUE DINO */
+  if(state === "countdown"){
+    ctx.fillStyle = "#0d47a1";
+    ctx.font = "bold 80px Arial";
+    ctx.textAlign = "center";
+    ctx.textBaseline = "middle";
+    ctx.fillText(Math.ceil(countdown/60), canvas.width/2, canvas.height/2);
+    countdown--;
+    if(countdown <= 0) state = "play";
+    requestAnimationFrame(loop);
+    return;
+  }
+
+  if(state === "play" && !paused){
     player.vy += 0.65;
     player.y += player.vy;
 
@@ -183,31 +293,30 @@ function loop(time){
       player.onGround = true;
     }
 
-    /* SPAWN OBSTACLES */
     if(time - lastSpawn > spawnDelay){
       spawnObstacle();
       lastSpawn = time;
-      spawnDelay = 1400 + Math.random() * 700;
+      spawnDelay = 1200 + Math.random() * 700;
     }
 
-    /* OBSTACLES */
-    obstacles.forEach(o => {
+    obstacles.forEach(o=>{
       o.x -= speed;
-      ctx.fillStyle = "#e53935";
-      ctx.fillRect(o.x, o.y, o.w, o.h);
+      ctx.fillStyle = immunity > 0 ? "#81c784" : "#e53935";
+      ctx.fillRect(o.x,o.y,o.w,o.h);
 
-      const dx = Math.max(o.x, Math.min(player.x, o.x + o.w));
-      const dy = Math.max(o.y, Math.min(player.y, o.y + o.h));
-      if((player.x - dx)**2 + (player.y - dy)**2 < player.r**2){
-        document.getElementById("start").style.display = "flex";
-        state = "menu";
+      const dx = Math.max(o.x, Math.min(player.x, o.x+o.w));
+      const dy = Math.max(o.y, Math.min(player.y, o.y+o.h));
+      if(immunity <= 0 && (player.x-dx)**2 + (player.y-dy)**2 < player.r**2){
+        showQuestion();
       }
     });
 
     obstacles = obstacles.filter(o => o.x + o.w > 0);
 
     score++;
-    speed += 0.0007;
+    speed += 0.0006;
+    if(score % 350 === 0) level++;
+    if(immunity > 0) immunity--;
   }
 
   /* PLAYER */
@@ -223,6 +332,7 @@ function loop(time){
   ctx.fillStyle = "#0d47a1";
   ctx.font = "bold 16px Arial";
   ctx.fillText("Score : " + score, 12, 12);
+  ctx.fillText("Niveau : " + level, 12, 34);
 
   requestAnimationFrame(loop);
 }
@@ -231,4 +341,3 @@ requestAnimationFrame(loop);
 
 </body>
 </html>
-
